--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,10 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.input_area {
+  @apply rounded-2xl border-gray-200 shadow-md shadow-gray-100 border flex flex-col 
+  p-5 md:w-[80%] w-[95%] mx-auto mt-6 items-end
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+textarea {
+  @apply resize-none w-full focus:outline-none 
 }
